henplus (0.9.3-1) unstable; urgency=low
  
  * fix a bug that rendered set-var unusable.
  * add property support: remove of comments is now a property
  * make table column separator configurable with a property
  
 -- Henner Zeller <H.Zeller@acm.org>  Thu, 01 May 2003 22:54:38 +0200
  
henplus (0.9.2-2) unstable; urgency=low

  * select CLOBs

 -- Henner Zeller <H.Zeller@acm.org>  Tue, 18 Mar 2003 11:49:12 +0100

henplus (0.9.1-1) unstable; urgency=low
  
  * do a workaround for a bug in hsqldb (exiting does not work properly)
  * rename the commands 'set' and 'unset' to 'set-var' and 'unset-var'
    because these are probably common commands provided by databases
  * rename session only, if a session with the given name does not already
    exist
  * add password-erase-while-typing hack.
  * make removing of comments switchable. Oracle for instance conveys
    hints in comments.
  
 -- Henner Zeller <H.Zeller@acm.org>  Sun, 26 Jan 2003 12:12:12 +0100

henplus (0.9-1) unstable; urgency=low

  * Initial Release as debian package.

 -- Henner Zeller <H.Zeller@acm.org>  Sat, 25 Jan 2003 18:11:14 +0100
