@@ -1,11 +1,11 @@
-<!-- $Id: build.xml,v 1.29 2003-03-18 10:50:32 hzeller Exp $ -->
+<!-- $Id: build.xml,v 1.30 2003-05-01 20:31:58 hzeller Exp $ -->
 <project name="HenPlus" default="compile" basedir=".">
      <!-- installation properties -->
      <property name="prefix"               value="/usr" />
      <property name="DESTDIR"              value="/" />
 
      <!-- properties -->
-     <property name="version"              value="0.9.2" />
+     <property name="version"              value="0.9.3" />
      <property name="src"                  value="src" />
      <property name="bin"                  value="bin" />
      <property name="lib"                  value="lib" />
